feat: esercizio completato

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!-- foglio di stile -->
 </head>
 <body>
-    
+    <img src="img/white_lamp_360.png" alt="Lampadina Spenta" id="img">
+    <button id="btn">accendi la luce</button>
     <script src="js/app.js"></script>
 </body>
 </html>
